--- a/gb/13/1/7/n3770773.md
+++ b/gb/13/1/7/n3770773.md
@@ -1,13 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fbiirc361/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fbiirc361/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fbiirc361/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fbiirc361/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fbiirc361/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fbiirc361/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fbiirc361/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽华人导游带团吃慈善圣诞餐 市民愤怒</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2013/01/1301090341272497-393x594.jpg" />
-<h6>奥克兰City Mission组织执行长Diane Robertson。(Getty Images)
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2013年01月07日讯】（大纪元记者魏仲芝、张莉莉<ahref="https://github.com/fbiirc361/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>奥克兰综合报导）2012年12月25日，一名华人非法<ahref="https://github.com/fbiirc361/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>业者带一群中国游客去享用了奥克兰City Mission组织每年为贫穷民众提供的慈善圣诞午餐。该组织谴责此举非常不道德。事件被媒体曝光后，引起奥克兰市民的愤怒。</p>
-<p>慈善圣诞餐：<ahref="https://github.com/fbiirc361/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>最大慈善盛事</p>
+	<p>【大纪元2013年01月07日讯】（大纪元记者魏仲芝、张莉莉<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>奥克兰综合报导）2012年12月25日，一名华人非法<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>业者带一群中国游客去享用了奥克兰City Mission组织每年为贫穷民众提供的慈善圣诞午餐。该组织谴责此举非常不道德。事件被媒体曝光后，引起奥克兰市民的愤怒。</p>
+<p>慈善圣诞餐：<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>最大慈善盛事</p>
 <p>一年一度的奥克兰圣诞大餐是新西兰最大的慈善盛事。主办单位经过艰苦努力，共筹集到了约90万元善款，招待贫穷民众，其中包括低收入者、流浪人士和无家可归者。会场内2,800个用餐席位座无虚席，还有150人不得不安排在会场外的野餐桌上进食。</p>
 <p>中国游客成“不速之客”主办方谴责</p>
 <p>电视一台在圣诞节后的报导中说，有十几名中国游客参加了在Viaduct活动中心举行的慈善圣诞午餐会。主办方City Mission的新闻发言人透露，在当天的活动中，大多数就餐者都是凭有效门票入场。但对于这群中国游客所持门票的来源，主办方表示怀疑。</p>
@@ -15,7 +14,7 @@
 <p>City Mission执行长黛安?罗宾逊（Diane Robertson）认为，该旅行社应该向所有为圣诞慈善午餐出钱出力的义工和慈善人士道歉。</p>
 <p>奥克兰市民愤怒 华人也纷纷谴责</p>
 <p>该事件曝光后，在当地引起极大反响，有听众在新西兰广播电台的节目里愤怒地表示，圣诞大餐凝聚了慈善工作人员和志愿者的艰辛工作，凝聚了新西兰好心人的颗颗爱心，这种行为是对慈善事业的亵渎。</p>
-<p>此事件也引起当地华人强烈关注，不少人感到耻辱，有人则希望能找到这家旅行公司还原事件真相。City Mission发言人也表示，许多当地旅行社对此事感到非常气愤，因为这败坏了<ahref="https://github.com/fbiirc361/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>业者的声誉。</p>
+<p>此事件也引起当地华人强烈关注，不少人感到耻辱，有人则希望能找到这家旅行公司还原事件真相。City Mission发言人也表示，许多当地旅行社对此事感到非常气愤，因为这败坏了<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>业者的声誉。</p>
 <p>中国游客接受采访 详诉被骗经过</p>
 <p>1月5日，英文《先驱报》跟进报导，并采访了该旅游团中一名被蒙在鼓里的中国游客。习铭（音译）是来自武汉的中国游客，他于12月参加了北岛四天的旅游团，之后留下来想“体验西方国家如何庆祝圣诞节”。</p>
 <p>50多岁的习先生对表示，他与其他10名团员被导游带去吃慈善圣诞午餐，但他并不知情。导游告诉他们说，这个活动是新西兰政府每年为市民和游客提供的“自助餐飨宴”。而当他从媒体得知该圣诞午餐是提供给穷人和流浪人的慈善救济午餐之后，非常震惊。</p>
@@ -32,41 +31,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/12/12/20/n3757010.md#1">纽教育执行长辞职 舆论促部长下台</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/12/12/23/n3759881.md#1">组图：新西兰喜迎圣诞</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/12/12/25/n3760855.md#1">丰田86双门跑车夺得新西兰年度风云车大奖</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/12/12/28/n3763627.md#1">纽媒回顾2012年新西兰八大负面新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/12/20/n3757010.md#1">纽教育执行长辞职 舆论促部长下台</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/12/23/n3759881.md#1">组图：新西兰喜迎圣诞</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/12/25/n3760855.md#1">丰田86双门跑车夺得新西兰年度风云车大奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/12/28/n3763627.md#1">纽媒回顾2012年新西兰八大负面新闻</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752911.md#1" target="_blank">智诚：“除夕宴”在恸哭声中进行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/1/n10448635.md#1" target="_blank">林辉：上书毛反对土改 农学家慧眼识中共</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12755606.md#1">被问到如何经营企业？ 马斯克：我是外星人</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12756200.md#1">《转法轮》中提及的若干史前文明案例（1）</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/1/23/n12707338.md#1">他从一个奇梦 知晓了悲壮的前世</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/7/n12738763.md#1">天下第一福　招“福”秘辛</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/12/n12749815.md#1">【传奇大观】冥冥之中缘相牵 无欲无执道自成</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/18/n12759451.md#1">【珍言真语】薛浩然：港建制欺上瞒下捞钱</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/18/n12758743.md#1">【有冇搞错】拜登警告习 变调的弦外之音</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/17/n12756891.md#1">【大话西油】米开朗基罗巨作：最后的审判（3）</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12756186.md#1">未来与周星驰再搭档？吴孟达的回答感动网友</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12755344.md#1">专访余茂春：自由世界应对中共划“红线”</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12756512.md#1">【秦鹏直播】川普影响扩大 蓬佩奥成影子国务卿</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12756186.md#1">未来与周星驰再搭档？吴孟达的回答感动网友</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/15/n12754732.md#1">过年真被催婚怎么办？万茜给网友支招引热议</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/17/n12757677.md#1">太妍与差9岁的妹不曾吵架 夏妍：听姊的不会错</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12756445.md#1">分享年假满档行程 林依晨飙歌嗨翻粉丝</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/17/n12757589.md#1">古曜威分享过年出游照 外形获赞“像车银优”</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12755606.md#1">被问到如何经营企业？ 马斯克：我是外星人</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/15/n12754726.md#1">糖尿病一定要吃糖类？8种食物降血糖</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12756091.md#1">老化、生病都是它惹的祸！做对2件事抗氧化</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/16/n12755439.md#1">号称“永不沉没” 铁达尼号遇难真实影片</a></li>
-<li><a href="https://github.com/fbiirc361/djy/blob/master/gb/21/2/17/n12757306.md#1">濒死研究权威医生：死亡过程祥和且愉快</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fbiirc361/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fbiirc361/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/1/7/n3770773.htm">纽华人导游带团吃慈善圣诞餐 市民愤怒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/1/7/n3770773.htm">纽华人导游带团吃慈善圣诞餐 市民愤怒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fbiirc361/djy/blob/master/gb/13/1/7/n3770773.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fbiirc361/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fbiirc361/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fbiirc361/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fbiirc361/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbiirc361/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/13/1/7/n3770773.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
